[package]
name = "procart"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
bevy = "0.16.0"
bevy_vector_shapes = "0.10.0"
bevy_egui = "0.34.1"

strum = "0.27.1"
strum_macros = "0.26.4"
rand = "0.9.0"
